[client] fix nav : resize width

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -2,10 +2,13 @@
   border-bottom: 1px solid black;
   width: 100vw;
   flex: 0 1 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #Nav .container {
   border: 1px solid black;
-  margin: 0 1rem;
+  width: 60rem;
   height: 4rem;
   display: flex;
   justify-content: space-between;
@@ -17,9 +20,20 @@
   align-items: center;
 }
 #Nav .box:first-child {
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+}
+#Nav .box:first-child img {
+  margin-right: 0.2rem;
+}
+#Nav .box:last-child {
 }
 #Nav .box:last-child > a{
-  margin: 0 0.5rem
+  font-size: 1.2rem;
+  margin: 0 0.5rem;
+}
+#Nav .box:last-child > a div {
 }
 #Nav .bar {
   background-color: black;
