--- a/client/src/components/Login/LoginModal.css
+++ b/client/src/components/Login/LoginModal.css
@@ -4,7 +4,7 @@
   height: 30rem;
   border-radius: 20px;
 }
-#LoginModal .container {
+#LoginModal .modal-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -12,25 +12,23 @@
   justify-content: space-between;
   
 }
-#LoginModal .box {
+#LoginModal .modal-box {
   width: 22rem
 }
-#LoginModal .box:first-child {
+#LoginModal .modal-box:first-child {
   flex: 0 0 20rem;
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
+  align-items: center;
+  position: relative;
 }
-#LoginModal .box:first-child > div {
+#LoginModal .modal-box:first-child > div:not(:last-child) {
   width: 19rem;
   height: 2.5rem;
-  /* border: 1px solid black; */
-  margin: 0.2rem 0
+  margin: 0.5rem 0
 }
-#LoginModal .box:last-child {
-  /* flex: 0 1 7rem; */
-}
-#LoginModal .box:first-child div:not(:nth-child(3)) input{
+#LoginModal .modal-box:first-child div:not(:nth-child(3)) input{
   width: 17.6rem;
   height: 2.1rem;
   font-size: 1rem;
@@ -38,21 +36,26 @@
   outline: none;
   border-radius: 7px;
 }
-#LoginModal input:first-child::placeholder {
+#LoginModal .modal-box:first-child > div:nth-child(1) {
+  margin-top: 3rem;
 }
-#LoginModal .box:first-child > div:nth-child(3) {
+#LoginModal .modal-box:first-child > div:nth-child(2) {
+  margin-top: 1.5rem;
+
+}
+#LoginModal .modal-box:first-child > div:nth-child(3) {
+  position: absolute;
+  bottom: 5rem;
   display: flex;
+  justify-content: center;
   align-items: center;
   font-size: 0.8rem;
-  height: 1.2rem;
-  margin-bottom: 1rem;
+  color: red;
+  font-weight: 700;
 }
-#LoginModal .box:first-child > div:nth-child(3) input{
-  width: 1rem;
-  height: 1rem;
-  margin-right: 0.4rem;
-}
-#LoginModal .box:first-child > div:nth-child(4) {
+
+#LoginModal .modal-box:first-child > div:nth-child(4) {
+  margin-top: 4rem;
   background-color: red;
   border-radius: 7px;
   cursor: pointer;
@@ -61,16 +64,18 @@
   align-items: center;
   font-size: 1.1rem;
 }
-#LoginModal .box:first-child > div:nth-child(5) {
-  font-size: 0.9rem;
+#LoginModal .modal-box:first-child > div:nth-child(5) {
+  font-size: 0.8rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#LoginModal .box:first-child > div:nth-child(5) span{
-  cursor: pointer;
+#LoginModal .modal-box:first-child > div:nth-child(5) span {
+  margin: 0 0.2rem
 }
-#LoginModal .box:first-child > div:nth-child(5) .bar {
-  margin: 0 0.8rem;
-  color: gray
+#LoginModal .modal-box:first-child > div:nth-child(5) a {
+  font-weight: 700;
+}
+
+#LoginModal .modal-box:last-child {
 }
