[client] fix detail: remove border

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,14 +1,13 @@
 #Footer {
-  border: 1px solid black;
   width: 100vw;
   flex: 0 1 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(211, 211, 211);
 
 }
 #Footer .container {
-  border: 1px solid black;
   width: 60rem;
   height: 5rem;
   display: flex;
@@ -16,11 +15,10 @@
   align-items: center;
 }
 #Footer .box {
-  border: 1px solid black;
   height: 5rem;
 }
 #Footer .box:first-child {
-  width: 20rem;
+  width: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,18 +31,31 @@
 #Footer .box:last-child {
   width: 40rem;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
 }
 #Footer .contents {
-  border: 1px solid black;
-  width: 30rem;
+  width: 50rem;
   height: 4rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  font-size: 1rem;
+  display: flex; 
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+}
+#Footer .contents > div {
+  margin: 0.1rem 0;
+}
+#Footer .contents span {
+  margin-right: 0.3rem;
+}
+#Footer .contents span:first-child {
+  font-weight: 700;
 }
 #Footer .contents a {
   margin-left: 0.3rem;
+}#Footer .bar {
+  background-color: black;
+  padding: 7px 0.7px;
+  margin: 0 0.2rem
 }
