--- a/client/src/pages/css/Landing.css
+++ b/client/src/pages/css/Landing.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(255, 250, 243);
 }
 #Landing .container {
   border: 1px solid black;
