--- a/client/src/components/Login/LoginModal.css
+++ b/client/src/components/Login/LoginModal.css
@@ -71,11 +71,13 @@
   justify-content: center;
 }
 #LoginModal .modal-box:first-child > div:nth-child(5) span {
-  margin: 0 0.2rem
+  margin: 0 0.2rem;
 }
 #LoginModal .modal-box:first-child > div:nth-child(5) a {
   font-weight: 700;
+  text-decoration: underline;
 }
 
 #LoginModal .modal-box:last-child {
+  flex: 1 1 0
 }
