--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -12,12 +12,10 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  z-index: 2;
-  background-color: white;
+  /* background-color: white; */
   
 }
 #Nav .box {
-  z-index: 1;
   display: flex;
   align-items: center;
   height: 4rem;
