--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -12,7 +12,6 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  /* background-color: white; */
   
 }
 #Nav .box {
@@ -20,70 +19,18 @@
   align-items: center;
   height: 4rem;
 }
-#Nav .box:first-child {
-  font-size: 1.2rem;
+#Nav .box:nth-child(1) {
+  font-size: 1.5rem;
   font-weight: 700;
   letter-spacing: -0.5px;
 }
-#Nav .box:first-child img {
+#Nav .box:nth-child(1) img {
+  width: 2.4rem;
   margin-right: 0.2rem;
 }
-#Nav .box:last-child {
-}
-#Nav .box:last-child > a{
-  margin: 0 0.5rem;
-}
-#Nav .box:last-child > a div {
-  font-size: 1.2rem;
-}
-#Nav .bar {
-  background-color: black;
-  padding: 10px 0.8px
-}
-#Nav .isLogin {
-  font-size: 1.2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-}
-#Nav .isLogin div:first-child {
-}
-#Nav .isLogin div:first-child span:last-child{
-  margin: 0 1rem;
-  cursor: pointer;
-}
-#Nav .isLogin #myMenu {
-  width: 11rem;
-  height: 0rem;
-  position: absolute;
-  top: 3.2rem;
-  right: -1px;
-  transition: all 0.2s ease-in-out;
-  flex-direction: column;
-}
 
-#Nav .menuBtnOn #myMenu {
-  height: 5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  font-size: 1rem;
-  border: 1px solid black;
-}
-#Nav .isLogin #myMenu  div {
-  display: none
-}
-#Nav .menuBtnOn #myMenu  div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0.3rem 0;
-  cursor: pointer;
-
-}
-@media screen and (min-width: 970px) {
-
+@media screen and (max-width: 980px) {
+  #Nav {
+    background-color: rgb(209, 209, 209);
+  }
 }
