--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,8 @@ html, body, #root {
 #App {
   display: flex;
   flex-direction: column;
-  height:100%
+  height:100%;
+  justify-content: center;
+  align-items: center;
 }
 /* @media screen and (min-width: 970px) {} */
