--- a/client/src/components/Modal/EditProfileModal/EditProfileModal.css
+++ b/client/src/components/Modal/EditProfileModal/EditProfileModal.css
@@ -1,5 +1,5 @@
 /*! EditUserName */
-#EditUserName {
+.editProfileModal {
   width: 25rem;
   height: 13rem;
   border: 1px solid black;
@@ -7,8 +7,8 @@
   background-color: #555860;
   position: absolute;
   left: 50%;
-  bottom: 0;
-  transform: translate(-50%, 50%);
+  top: 40%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   /* justify-content: center;
@@ -17,10 +17,10 @@
   font-weight: 600;
 }
 
-#EditUserName .editUserName-box {
+.editProfileModal-box {
   /* border: 1px solid black; */
 }
-#EditUserName .editUserName-box:nth-child(1){
+.editProfileModal-box:nth-child(1){
   flex: 1 1 0;
   display: flex;
   justify-content: center;
@@ -28,29 +28,25 @@
   font-size: 1.5rem;
   border-bottom: 1px solid black;
 }
-#EditUserName .editUserName-box:nth-child(2){
+.editProfileModal-box:nth-child(2){
   flex: 2 1 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-#EditUserName .editUserName-box:nth-child(2) > div{
+.editProfileModal-box:nth-child(2) > div{
   /* margin: 0.5rem 0 1rem 1rem */
   padding: 0 1rem;
   margin: 0.2rem 0
 }
-#EditUserName .editUserName-box:nth-child(2) > div:nth-child(1) {
 
-}
-#EditUserName .editUserName-box:nth-child(2) > div:nth-child(2) {
-}
-#EditUserName .editUserName-box:nth-child(2) input {
+.editProfileModal-box:nth-child(2) input {
   height: 2rem;
   width: 22rem;
   outline: none;
   font-size: 1.2rem;
 }
-#EditUserName .editUserName-box:nth-child(3){
+.editProfileModal-box:nth-child(3){
   flex: 1 1 0;
   display: flex;
   justify-content: flex-end;
@@ -61,7 +57,7 @@
   
   
 }
-#EditUserName .editUserName-box:nth-child(3) > div {
+.editProfileModal-box:nth-child(3) > div {
   /* border: 1px solid black; */
   border-radius: 5px;
   width: 5rem;
@@ -73,7 +69,7 @@
   cursor: pointer;
 
 }
-#EditUserName .editUserName-box:nth-child(3) > div:nth-child(1){}
-#EditUserName .editUserName-box:nth-child(3) > div:nth-child(2){
+.editProfileModal-box:nth-child(3) > div:nth-child(1){}
+.editProfileModal-box:nth-child(3) > div:nth-child(2){
   background-color: #5765f2;
 }
