--- a/client/src/components/Mypage/Profile.css
+++ b/client/src/components/Mypage/Profile.css
@@ -3,7 +3,6 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  position: relative;
 }
 .profile-container:nth-child(1) {
   flex: 0 1 4rem;
@@ -24,7 +23,20 @@
   justify-content: center;
   align-items: center;
 }
-
+.editProfileModal-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(161, 161, 161, 0.559);
+}
+.editProfileModal-background-a {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  
+}
 /*! UserImage */
 #UserImage {
   border: 1px solid black;
