--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,4 +17,17 @@ html, body, #root {
   justify-content: center;
   align-items: center;
 }
+.errorModal-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(161, 161, 161, 0.559);
+}
+.errorModal-background-a {
+  width: 100%;
+  height: 100%;
+  position: relative;
+} 
 /* @media screen and (min-width: 970px) {} */
