--- a/client/src/components/Modal/EditProfileModal/EditProfileModal.css
+++ b/client/src/components/Modal/EditProfileModal/EditProfileModal.css
@@ -2,7 +2,7 @@
 .editProfileModal {
   width: 25rem;
   height: 13rem;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 15px;
   background-color: #555860;
   position: absolute;
@@ -39,12 +39,15 @@
   padding: 0 1rem;
   margin: 0.2rem 0
 }
-
+.editProfileModal-box:nth-child(2) > div:first-child {
+  padding-left: 1.5rem;
+}
 .editProfileModal-box:nth-child(2) input {
   height: 2rem;
   width: 22rem;
   outline: none;
   font-size: 1.2rem;
+  padding-left: 0.5rem;
 }
 .editProfileModal-box:nth-child(3){
   flex: 1 1 0;
