--- a/client/src/components/Modal/EditProfileModal/EditProfileModal.css
+++ b/client/src/components/Modal/EditProfileModal/EditProfileModal.css
@@ -50,6 +50,15 @@
   padding-left: 0.5rem;
 }
 .editProfileModal-box:nth-child(3){
+  flex: 0 1 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: red;
+  font-size: 0.8rem;
+  padding-bottom: 0.5rem
+}
+.editProfileModal-box:nth-child(4){
   flex: 1 1 0;
   display: flex;
   justify-content: flex-end;
@@ -60,7 +69,7 @@
   
   
 }
-.editProfileModal-box:nth-child(3) > div {
+.editProfileModal-box:nth-child(4) > div {
   /* border: 1px solid black; */
   border-radius: 5px;
   width: 5rem;
@@ -73,6 +82,6 @@
 
 }
 .editProfileModal-box:nth-child(3) > div:nth-child(1){}
-.editProfileModal-box:nth-child(3) > div:nth-child(2){
+.editProfileModal-box:nth-child(4) > div:nth-child(2){
   background-color: #5765f2;
 }
