--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,8 +14,9 @@ html, body, #root {
   display: flex;
   flex-direction: column;
   height:100%;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  overflow-y: scroll;
 }
 .errorModal-background {
   position: absolute;
