[client] fix nav + err modal: fix z-index

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,6 +25,7 @@ html, body, #root {
   width: 100vw;
   height: 100vh;
   background-color: rgba(161, 161, 161, 0.559);
+  z-index: 1000;
 }
 .errorModal-background-a {
   width: 100%;
