--- a/client/src/components/Bid/css/ItemSearch.css
+++ b/client/src/components/Bid/css/ItemSearch.css
@@ -6,26 +6,37 @@
   justify-content: center;
   /* align-items: center; */
 }
-#ItemSearch > div {
-  margin-top: 1rem;
+.itemSearch-container {
+  width: 60rem;
+  height: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 .itemSearch-box {
-  width: 20rem;
-  height: 2rem;
+  width: 30rem;
+  /* height: 2rem; */
   /* border: 1px solid black; */
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   align-items: center;
 
 }
-.itemSearch-box input {
-  width: 20rem;
+.itemSearch-box:first-child {
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.itemSearch-box:first-child input {
+  width: 22rem;
   height: 1.9rem;
   padding-left: 0.5rem;
   font-size: 1.2rem;
   outline: none;
   border-radius: 5px;
-
 }
 #btn-itemSearch {
   width: 6rem;
@@ -36,5 +47,9 @@
   justify-content: center;
   align-items: center;
   margin-left: 1rem;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
+}
+.itemSearch-box:last-child {
+  height: 2rem;
+  border: 1px solid black
 }
