[client] fix css : for nav position: fixexd

--- a/client/src/pages/css/Item.css
+++ b/client/src/pages/css/Item.css
@@ -1,6 +1,6 @@
 #Item {
+  margin-top: 4rem;
   width: 60rem;
-  /* margin-top: 4rem; */
   flex: 1 1 0;
   display: flex;
   justify-content: center;
