--- a/client/src/pages/css/Bid.css
+++ b/client/src/pages/css/Bid.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  border: 1px solid black;
 }
 .bid-container {
   width: 60rem;
