--- a/client/src/pages/css/Login.css
+++ b/client/src/pages/css/Login.css
@@ -1,9 +1,15 @@
 #Login {
-  margin-top: 4rem;
-  flex: 1 1 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 200;
+  background-color: rgb(255, 255, 255);
+
 }
 #Login .container {
   width: 60rem;
@@ -12,6 +18,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgb(255, 255, 255);
+
 }
 #Login .box {
   width: 22rem;
