--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
 #Footer {
   width: 100vw;
-  flex: 0 1 5rem;
+  /* flex: 0 1 5rem; */
+  position: absolute;
+  bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
