--- a/client/src/pages/css/Login.css
+++ b/client/src/pages/css/Login.css
@@ -1,7 +1,4 @@
 #Login {
-  position: absolute;
-  top: 0;
-  left: 0;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -16,28 +13,55 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   background-color: rgb(255, 255, 255);
 
 }
 #Login .box {
-  width: 22rem;
+  width: 100%;
 }
-#Login .box:first-child {
-  text-align: center;
+#Login .box:nth-child(1) {
+  flex: 0 1 4rem;
+  width: 100%;
+  display: flex;
+}
+#Login .box:nth-child(2) {
+  height: 13rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+
+}
+#Login .box:nth-child(2) .box-contents {
   height: 8rem;
+  width: 32rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   font-size: 1.5rem;
+
 }
-#Login .box:first-child > .content1 {
+#Login .box:nth-child(2) .content1 {
   font-weight: 700;
   font-size: 3rem;
   margin-bottom: 0.8rem;
 }
-#Login .box:last-child {
+#Login .box:nth-child(3){
   height: 35rem;
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (max-width: 970px) {
+  #Login .container{
+    background-color: rgb(40, 109, 168);
+  }
+  #Login .box:nth-child(1) {
+    margin-left: 4rem;
+  }
+  #Login .box:nth-child(2) .box-contents {
+    width: 22rem;
+  }
 }
