--- a/client/src/components/Login/LoginModal.css
+++ b/client/src/components/Login/LoginModal.css
@@ -1,8 +1,8 @@
 #LoginModal {
-  border: 1px solid rgb(0, 0, 0, 0.4);
-  width: 22rem;
+  /* border: 1px solid rgb(0, 0, 0, 0.4); */
+  width: 25rem;
   height: 30rem;
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 #LoginModal .modal-container {
   width: 100%;
@@ -10,40 +10,91 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   
 }
 #LoginModal .modal-box {
-  width: 22rem
+  width: 25rem
 }
 #LoginModal .modal-box:first-child {
-  flex: 0 0 20rem;
+  flex: 0 0 19rem;
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  justify-content: space-between;
+
 }
-#LoginModal .modal-box:first-child > div:not(:last-child) {
-  width: 19rem;
-  height: 2.5rem;
-  margin: 0.5rem 0
+#LoginModal .modal-box:first-child > div{
+  width: 25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid red */
 }
-#LoginModal .modal-box:first-child div:not(:nth-child(3)) input{
-  width: 17.6rem;
-  height: 2.1rem;
+#LoginModal .login-userInput {
+  flex: 0 1 10.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#LoginModal .login-userInput div input{
+  width: 23.7rem;
+  height: 3.5rem;
+  margin: 0.5rem 0;
   font-size: 1rem;
   padding-left: 1rem;
   outline: none;
-  border-radius: 7px;
 }
-#LoginModal .modal-box:first-child > div:nth-child(1) {
-  margin-top: 3rem;
+#LoginModal .error-message {
+  flex: 0 1 1.5rem;
 }
-#LoginModal .modal-box:first-child > div:nth-child(2) {
-  margin-top: 1.5rem;
-
+#LoginModal .error-message div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  color: red;
+  font-weight: 700;
 }
-#LoginModal .modal-box:first-child > div:nth-child(3) {
+#LoginModal .login-button {
+  flex: 0 1 7rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#btn-login {
+  width: 25rem;
+  height: 4rem;
+  background-color: #0477b5;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+#LoginModal .go-register  {
+  width: 100%;
+  height: 1.5rem;
+  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#LoginModal .go-register  span {
+  margin: 0 0.2rem;
+}
+#LoginModal .go-register  a {
+  font-weight: 700;
+  text-decoration: underline;
+}
+/* #LoginModal .modal-box:first-child > div:nth-child(3) {
   position: absolute;
   bottom: 5rem;
   display: flex;
@@ -52,10 +103,9 @@
   font-size: 0.8rem;
   color: red;
   font-weight: 700;
-}
+} */
 
-#LoginModal .modal-box:first-child > div:nth-child(4) {
-  margin-top: 4rem;
+/* #LoginModal .modal-box:first-child > div:nth-child(4) {
   background-color: red;
   border-radius: 7px;
   cursor: pointer;
@@ -64,20 +114,86 @@
   align-items: center;
   font-size: 1.1rem;
 }
-#LoginModal .modal-box:first-child > div:nth-child(5) {
-  font-size: 0.8rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#LoginModal .modal-box:first-child > div:nth-child(5) span {
-  margin: 0 0.2rem;
-}
-#LoginModal .modal-box:first-child > div:nth-child(5) a {
-  font-weight: 700;
-  text-decoration: underline;
-}
+ */
 
 #LoginModal .modal-box:last-child {
   flex: 1 1 0
+}
+
+
+/*! ---------------------------970px--------------------------- */
+@media screen and (max-width: 970px) {
+  #LoginModal {
+  width: 22rem;
+
+  }
+  #LoginModal .modal-box {
+    width: 22rem
+  }
+  #LoginModal .modal-box:first-child {
+    flex: 0 0 20rem;
+    border-bottom: 1px solid rgb(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+  #LoginModal .modal-box:first-child > div:not(:last-child) {
+    width: 19rem;
+    height: 2.5rem;
+    margin: 0.5rem 0
+  }
+  #LoginModal .modal-box:first-child div:not(:nth-child(3)) input{
+    width: 17.6rem;
+    height: 2.1rem;
+    font-size: 1rem;
+    padding-left: 1rem;
+    outline: none;
+    border-radius: 7px;
+  }
+  #LoginModal .modal-box:first-child > div:nth-child(1) {
+    margin-top: 3rem;
+  }
+  #LoginModal .modal-box:first-child > div:nth-child(2) {
+    margin-top: 1.5rem;
+  
+  }
+  #LoginModal .modal-box:first-child > div:nth-child(3) {
+    position: absolute;
+    bottom: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.8rem;
+    color: red;
+    font-weight: 700;
+  }
+  
+  #LoginModal .modal-box:first-child > div:nth-child(4) {
+    margin-top: 4rem;
+    background-color: red;
+    border-radius: 7px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.1rem;
+  }
+  #LoginModal .modal-box:first-child > div:nth-child(5) {
+    font-size: 0.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #LoginModal .modal-box:first-child > div:nth-child(5) span {
+    margin: 0 0.2rem;
+  }
+  #LoginModal .modal-box:first-child > div:nth-child(5) a {
+    font-weight: 700;
+    text-decoration: underline;
+  }
+  
+  #LoginModal .modal-box:last-child {
+    flex: 1 1 0
+  }
 }
