--- a/client/src/components/Oauth/Oauth.css
+++ b/client/src/components/Oauth/Oauth.css
@@ -12,12 +12,12 @@
 }
 #Oauth .oauth-box {
   border: 1px solid rgb(0, 0, 0, 0.2);
-  width: 15rem;
-  height: 2.5rem;
+  width: 100%;
+  height: 3rem;
   margin: 0.2rem 0;
   display: flex;
   align-items: center;
-  border-radius: 25px;
+  border-radius: 5px;
   cursor: pointer;
 }
 #Oauth .oauth-box:first-child {
@@ -25,7 +25,7 @@
   color: 	#000000
 
 }
-#Oauth .oauth-box {
+#Oauth .oauth-box:last-child {
   background-color: #FEE500;
   color: 	#000000
 }
@@ -48,4 +48,61 @@
 }
 #Oauth .oauth-box > div:last-child{
   flex: 1 1 0;
+}
+ 
+@media screen and (max-width: 970px) {
+
+
+  #Oauth {
+    width: 100%;
+    height: 100%
+  }
+  #Oauth .oauth-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #Oauth .oauth-box {
+    border: 1px solid rgb(0, 0, 0, 0.2);
+    width: 15rem;
+    height: 2.5rem;
+    margin: 0.2rem 0;
+    display: flex;
+    align-items: center;
+    border-radius: 25px;
+    cursor: pointer;
+  }
+  #Oauth .oauth-box:first-child {
+    background-color: #ffffff;
+    color: 	#000000
+  
+  }
+  #Oauth .oauth-box {
+    background-color: #FEE500;
+    color: 	#000000
+  }
+  
+  #Oauth .oauth-box img{
+    margin-left: 1rem;
+    width: 2rem;
+  }
+  #Oauth .oauth-box > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    height: 2.5rem;
+    }
+  #Oauth .oauth-box > div:first-child{
+    flex: 0 1 2.5rem
+  
+  
+  }
+  #Oauth .oauth-box > div:last-child{
+    flex: 1 1 0;
+  }
+    
 }
